welcome.lessons.welcome.methods.basics.Methods.scala.error
Methods:9: error: not found: value compteur
	compteur=compteur+1
        ^Methods:14: error: not found: value compteur
	for(i<-1 to compteur)
                    ^